Fix footer z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,10 @@ p:last-child {
       Footer
 -----------------*/
 
+#footer {
+  z-index: 1000;
+}
+
 #body > .pusher > .footer {
   margin: 0em;
   border-radius: 0em;
